# surrealdb_migration_engine

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.devcontainer/: devcontainer.json
schema/: 0001_create_test_table.surql
src/: errors.rs  lib.rs
tests/: mod.rs
tests/migrations/: 0001_add_number_field_to_test.surql
