[package]
name = "surrealdb_migration_engine"
version = "0.0.1"
edition = "2021"
description = "Migration engine for surrealdb"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "surrealdb_migration_engine"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
surrealdb = "1.1.1"
serde = "1.0.195"
serde_json = "1.0.111"
chrono = "0.4.33"
rust-embed = "8.2.0"
regex = "1.10.3"

[dev-dependencies]
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"