[package]
name = "surrealdb_migration_engine"
version = "0.2.1"
edition = "2021"
description = "Migration engine for surrealdb"
license = "MIT"
repository = "https://github.com/mcmah309/surrealdb_migration_engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "surrealdb_migration_engine"
path = "src/lib.rs"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
surrealdb = "1"
serde = "1"
serde_json = "1"
chrono = "0.4"
rust-embed = "8"
regex = "1"
error_set = "0.4"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"